키패드 수정, 2자리로 수정

--- a/dpp.html
+++ b/dpp.html
@@ -191,7 +191,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -203,7 +203,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -215,7 +215,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -227,7 +227,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -239,7 +239,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -251,7 +251,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -261,7 +261,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -271,7 +271,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -281,7 +281,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -291,7 +291,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -301,7 +301,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -311,7 +311,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="6" aria-label="입력 숫자">
+                <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
