0이 먼저 오면 입력이 되지 않게 수정

--- a/dpp.html
+++ b/dpp.html
@@ -191,7 +191,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -203,7 +203,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -215,7 +215,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -227,7 +227,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -239,7 +239,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -251,7 +251,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -261,7 +261,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -271,7 +271,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -281,7 +281,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -291,7 +291,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -301,7 +301,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -311,7 +311,7 @@
             </div>
             <div class="verified-icon"></div>
             <div class="info-box">
-                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="number" value="" maxlength="2" aria-label="입력 숫자">
+                <input type="tel" oninput="this.value = this.value.replace(/[^0-9]/g, ''); this.value = parseInt(this.value, 10) || ''" class="number" value="" maxlength="2" aria-label="입력 숫자">
             </div>
         </div>
 
@@ -407,6 +407,12 @@
             inputs.forEach(input => {
                 // 'input' 이벤트: 값이 바뀔 때마다 실행 (입력, 삭제, 붙여넣기 등)
                 input.addEventListener('input', function() {
+                    // ✅ 선행 0 자동 삭제 로직 추가 (oninput 속성에서도 처리되지만, JavaScript에서도 일관성 있게 처리)
+                    if (this.id !== 'sumInput') {
+                        // 현재 value를 정수로 변환하여 선행 0 제거. NaN이거나 0일 경우 빈 문자열로 처리.
+                        this.value = parseInt(this.value, 10) || (this.value === '0' ? '0' : '');
+                    }
+
                     updateActiveState(this);
                     
                     // sumInput을 제외한 모든 입력에서 합산을 업데이트
