텍스트 정렬 왼쪽으로 수정

--- a/dpp.html
+++ b/dpp.html
@@ -154,7 +154,7 @@
             border: 0px;
             width: 100%;
             outline: none;
-            text-align: right;
+            text-align: left;
         }
         
         /* 합산 필드의 커서 모양을 기본으로 변경 (편집 불가능임을 시각적으로 나타냄) */
